hphp/hack/test/typecheck/new_inference/merge_tvars3.php.like_types.exp
File "merge_tvars3.php", line 6, characters 27-28:
Invalid argument (Typing[4110])
File "merge_tvars3.php", line 3, characters 10-11:
Some type constraint(s) are violated here
File "merge_tvars3.php", line 3, characters 10-11:
T1 is a constrained type parameter
File "merge_tvars3.php", line 23, characters 29-36:
Expected arraykey
File "merge_tvars3.php", line 3, characters 10-11:
But got dynamic
